<resources>
    <string name="name">calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dev">/</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="back"><![CDATA[<—]]></string>
    <string name="app_name">hhh</string>
    <string name="multi">*</string>
    <string name="ac">C</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="ze">0</string>
    <string name="zer">0</string>
</resources>